--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
+    "downshift": "^9.0.10",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
